Fix landing page safari detection. Try to fix horizontal scrolling bar in iphone

--- a/src/css/FloatingProfilePicture.css
+++ b/src/css/FloatingProfilePicture.css
@@ -1,24 +1,33 @@
 
 .floating-profile-picture {
-  min-height: 380px;
+  height: 470px;
   margin-left: -225px;
   left: 50%;
 }
 
 @screen sm {
   .floating-profile-picture {
+    height: 500px;
     margin-left: -235px;
   }
 }
 @screen md {
   .floating-profile-picture {
-    margin-left: -210px;
+    margin-left: -240px;
   }
 }
 
 @screen lg {
   .floating-profile-picture {
+    height: 530px;
     margin-left: -190px;
+  }
+}
+
+@screen xl {
+  .floating-profile-picture {
+    height: 660px;
+    margin-left: -280px;
   }
 }
 
@@ -38,25 +47,25 @@
   top: -40px;
 }
 
-.floating-map-container, .floating-map-container-layer-1, .floating-map-container-layer-2 {
+.floating-map-container, .floating-map-container-layer-1 {
   position: relative;
   top: 400px;
-  left: -20px;
-  width: 600px;
-  height: 400px;
+  left: 130px;
+  width: 280px;
+  height: 280px;
   border-radius: 20px;
   transform: rotateX(62deg) rotateZ(-30deg);
   overflow: hidden;
   transition: transform 0.6s ease;
 }
 
-.floating-profile-picture-hover-trigger:hover .floating-map-container{
-  transform: rotateX(62deg) rotateZ(-30deg) translateZ(10px);
+.floating-profile-picture-hover-trigger:hover .floating-map-container {
+  transform: rotateX(62deg) rotateZ(-30deg) translateZ(3px);
 }
 
 .map-location-line {
   @apply absolute;
-  top: 280px;
+  top: 220px;
   left: 250px;
   height: 300px;
   opacity: 0.3;
@@ -69,7 +78,7 @@
 
 .map-location-dot {
   @apply block absolute;
-  top: 580px;
+  top: 520px;
   left: 244px;
   width: 13px;
   height: 13px;
@@ -77,7 +86,7 @@
   opacity: 0.8;
   border-radius: 99px;
   content: "";
-  transform: rotateX(62deg) rotateZ(-30deg) translate(2px, 4px);
+  transform: rotateX(62deg) rotateZ(-30deg) translate(1px, 2px);
   transition: background-color 0.6s ease, opacity 0.6s ease, transform 0.6s ease;
   z-index: 5;
 }
@@ -98,28 +107,16 @@
   opacity: 0.5;
 }
 
-.floating-map-container-layer-1, .floating-map-container-layer-2 {
+.floating-map-container-layer-1 {
   @apply absolute block;
   content: "";
   border-radius: 20px;
-}
-
-.floating-map-container-layer-1 {
   background: #f1e3d9;
-  transform: rotateX(62deg) rotateZ(-30deg) translate3d(0px, 0px, -25px);
+  transform: rotateX(62deg) rotateZ(-30deg) translate3d(0px, 0px, -15px);
 }
 .floating-profile-picture-hover-trigger:hover .floating-map-container-layer-1 {
-  transform: rotateX(62deg) rotateZ(-30deg) translate3d(0px, 0px, -10px);
+  transform: rotateX(62deg) rotateZ(-30deg) translate3d(0px, 0px, -8px);
 }
-
-.floating-map-container-layer-2 {
-  background: #e8d9ce;
-  transform: rotateX(62deg) rotateZ(-30deg) translate3d(0px, 0px, -50px);
-}
-.floating-profile-picture-hover-trigger:hover .floating-map-container-layer-2 {
-  transform: rotateX(62deg) rotateZ(-30deg) translate3d(0px, 0px, -30px);
-}
-
 
 .floating-map-container .colorizer {
   @apply absolute w-full h-full;
@@ -145,5 +142,5 @@
 }
 
 .floating-profile-picture-hover-trigger:hover .floating-map-container img {
-  transform: translate(-50%, -50%) scale(1.1);
+  transform: translate(-50%, -50%) scale(1);
 }
